Update README with setup instructions
Added instructions for cloning, compiling, and running the game.